--- a/app/views/assignments/_form.html.haml
+++ b/app/views/assignments/_form.html.haml
@@ -8,12 +8,12 @@
 
   .field
     = f.label :member_last_name
-    - members = options_from_collection_for_select(Member.all, :id, :last_name)
+    - members = options_from_collection_for_select(Member.where(user_id: current_user.id), :id, :last_name)
     = f.select :member_id, members, include_blank: "Choose a member"
 
   .field
     = f.label :committee_name
-    - committees = options_from_collection_for_select(Committee.all, :id, :name)
+    - committees = options_from_collection_for_select(Committee.where(user_id: current_user.id), :id, :name)
     = f.select :committee_id, committees, include_blank: "Choose a committee"
 
   .actions
