--- a/app/views/layouts/_nav_links_for_auth.html.haml
+++ b/app/views/layouts/_nav_links_for_auth.html.haml
@@ -2,6 +2,7 @@
   %li= link_to 'Members', '/members'
   %li= link_to 'Committees', '/committees'
   %li= link_to 'Assignments', '/assignments'
+  %li= link_to 'Committee Office', '/committee_offices'
   %li= link_to 'Edit account', edit_user_registration_path
   %li= link_to 'Sign out', destroy_user_session_path, :method=>'delete'
 - else
