--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -4,15 +4,14 @@
   %b Member type:
   = @member.member_type
 %p
-  %b Member title:
-  = @member.member_title
+  %b First name:
+  = @member.first_name
 %p
   %b Last name:
   = @member.last_name
-%p
-  %b First name:
-  = @member.first_name
 
 = link_to 'Edit', edit_member_path(@member)
 \|
 = link_to 'Back', members_path
+\|
+= link_to 'New', new_member_path
