--- a/app/views/assignments/show.html.haml
+++ b/app/views/assignments/show.html.haml
@@ -10,3 +10,5 @@
 = link_to 'Edit', edit_assignment_path(@assignment)
 \|
 = link_to 'Back', assignments_path
+\|
+= link_to 'New', new_assignment_path
